--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.1.2",
-    "vue": "^3.2.47",
+    "axios": "^1.4.0",
+    "vue": "^3.3.4",
     "vuetify": "^3.3.3"
   },
   "devDependencies": {
