--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@vueuse/core": "^10.1.2",
     "axios": "^1.4.0",
+    "html-to-image": "^1.11.11",
+    "html2png": "^1.1.2",
     "vue": "^3.3.4",
     "vuetify": "^3.3.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
     "autoprefixer": "^10.4.14",
+    "material-design-icons-iconfont": "^6.7.0",
     "postcss": "^8.4.24",
     "rollup-plugin-terser": "^7.0.2",
     "tailwindcss": "^3.3.2",
