--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "outDir": "/dist",
 
     /* Linting */
-    "strict": true,
+    "strict": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
